[project]
name = "cmpe214-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "setuptools==66.1.1",
    "einops>=0.8.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "ray[default]>=2.48.0",
    "sortedcontainers>=2.4.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "typer"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 120
